# Chronos-CLGCM

./: CMakeLists(server).txt  LICENSE.md  README.md  chronos.py  core_requirements.txt  dataset_chunk_create.py  expand_model.py  hierarchos.py  instruct_dataset_conversational.jsonl  pyproject.toml  requirements_kernel.txt  setup.bat  setup.py  setup.sh  test.jsonl
cpp/: CMakeLists.txt  bindings.cpp  chronos_matmul.cpp  chronos_matmul.h  chronos_vulkan.cpp  chronos_vulkan.h  hierarchos_matmul.cpp  hierarchos_matmul.h  hierarchos_vulkan.cpp  hierarchos_vulkan.h  test_kernel.py
cpp/shaders/: INT4.comp  Q2_K.comp  Q4_0.comp  Q4_0.spv  Q8_0.comp
shaders/: INT4.comp  INT4.spv  Q2_K.comp  Q2_K.spv  Q4_0.comp  Q8_0.spv
